# croppy

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STATUS.md  flake.nix
.github/workflows/: ci.yml  release.yml
assets/: README.md
examples/: perf_probe.rs  raw_decode_probe.rs  step01_prepare.rs  step02_detect_stub.rs
scripts/: debug.sh
src/: detect.rs  detect_debug.rs  detect_refine.rs  detect_refine_debug.rs  discover.rs  handoff.rs  lib.rs  main.rs  pipeline.rs  preprocess.rs  raw.rs
src/kernels/: edge_scan.rs  line_fit.rs  mod.rs  peak_pick.rs  signal_1d.rs
