[package]
name = "croppy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core errors and CLI argument parsing.
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Terminal UI for the main interactive app.
crossterm = "0.29.0"
ratatui = "0.29.0"

# RAW decode and image processing for detection + debug outputs.
image = "0.25.6"
imageproc = "0.25.0"
rsraw = "0.1.0"
rsraw-sys = "0.1.0"

# Utilities used by step tooling and pipeline traversal.
rand = "0.9.0"

# JSON I/O for handoff/result files.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# File discovery across RAW directories.
walkdir = "2.5.0"
