[package]
name = "croppy"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[profile.release]
panic = "abort"
strip = "symbols"

[features]
default = []
debug-artifacts = ["dep:serde_json"]
inner-parallelism = ["image/rayon", "imageproc/rayon"]

[dependencies]
# Core errors and CLI argument parsing.
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Terminal UI for the main interactive app.
crossterm = "0.29.0"
ratatui = "0.29.0"

# RAW decode and image processing for detection + debug outputs.
# Keep image/imageproc internal rayon disabled; we parallelize across files, and nested pools can hurt throughput.
image = { version = "0.25.6", default-features = false, features = [
    "default-formats",
] }
imageproc = { version = "0.25.0", default-features = false }
rsraw = "0.1.0"
rsraw-sys = "0.1.0"

# Utilities used by step tooling and pipeline traversal.
rand = "0.9.0"
rayon = "1.11.0"

# JSON I/O for handoff/result files.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }

# File discovery across RAW directories.
walkdir = "2.5.0"

[[example]]
name = "step01_prepare"
required-features = ["debug-artifacts"]

[[example]]
name = "step02_detect_stub"
required-features = ["debug-artifacts"]
